# qb-audio

./: terminal
server/: .gitignore  items.json  main.py  pyproject.toml  qb.json
server/src/: audio_processor.py  events.py
web/: index.html  package.json
web/src/: App.tsx
web/src/components/: EditAyahModal.tsx  LoadingButton.tsx
web/src/stores/: audioCache.ts
