[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "jiwer>=3.1.0",
    "langdetect>=1.0.9",
    "num2words>=0.5.14",
    "openai-whisper>=20240930",
    "pydub>=0.25.1",
]
